Add .env to .gitignore to protect API keys

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 # Local Netlify folder
 .netlify
+
+# Environment variables (contains secrets)
+.env
+.env.local
+.env.*.local
+
+# Claude Code
+.claude
